--- a/[Final]/Data_collection/2.[크롤링] 티몬_리뷰_크롤러(뷰티풀숲).ipynb
+++ b/[Final]/Data_collection/2.[크롤링] 티몬_리뷰_크롤러(뷰티풀숲).ipynb
@@ -480,6 +480,112 @@
     "data_df = pd.read_json('review_data_간편식_냉장_냉동.json')\n",
     "data_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>http://www.tmon.co.kr/api/detail/direct/v1/det...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>http://www.tmon.co.kr/api/detail/direct/v1/det...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>http://www.tmon.co.kr/api/detail/direct/v1/det...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>http://www.tmon.co.kr/api/detail/direct/v1/det...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>http://www.tmon.co.kr/api/detail/direct/v1/det...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
+       "      <td>http://www.tmon.co.kr/api/detail/direct/v1/det...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66</th>\n",
+       "      <td>http://www.tmon.co.kr/api/detail/direct/v1/det...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>http://www.tmon.co.kr/api/detail/direct/v1/det...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>http://www.tmon.co.kr/api/detail/direct/v1/det...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>http://www.tmon.co.kr/api/detail/direct/v1/det...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>70 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                    0\n",
+       "0   http://www.tmon.co.kr/api/detail/direct/v1/det...\n",
+       "1   http://www.tmon.co.kr/api/detail/direct/v1/det...\n",
+       "2   http://www.tmon.co.kr/api/detail/direct/v1/det...\n",
+       "3   http://www.tmon.co.kr/api/detail/direct/v1/det...\n",
+       "4   http://www.tmon.co.kr/api/detail/direct/v1/det...\n",
+       "..                                                ...\n",
+       "65  http://www.tmon.co.kr/api/detail/direct/v1/det...\n",
+       "66  http://www.tmon.co.kr/api/detail/direct/v1/det...\n",
+       "67  http://www.tmon.co.kr/api/detail/direct/v1/det...\n",
+       "68  http://www.tmon.co.kr/api/detail/direct/v1/det...\n",
+       "69  http://www.tmon.co.kr/api/detail/direct/v1/det...\n",
+       "\n",
+       "[70 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "error_page_ls_df = pd.read_json('error_page_간편식_냉장_냉동.json')\n",
+    "error_page_ls_df"
+   ]
   }
  ],
  "metadata": {
